<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_card_view"
    android:layout_width="185dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="1"
    app:cardBackgroundColor="@color/pale_green"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/note_header_image_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/image_upload"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_image_fitness" />

        <TextView
            android:id="@+id/note_header_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sample_text_header"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/note_sub_content_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/sample_text_sub"
            android:textColor="@color/dark_green"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/date_time_category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2024_08_20"
                android:textColor="@color/green_opacity"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_10_53am"
                android:textColor="@color/green_opacity"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/categories_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/fitness"
                android:textColor="@color/green_opacity"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/edit_image_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:src="@drawable/baseline_edit_24"/>

            <ImageButton
                android:id="@+id/delete_image_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:src="@drawable/baseline_delete_forever_24"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>