<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_green"
    tools:context=".EditNoteActivity">

    <RelativeLayout
        android:id="@+id/add_note_first_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/add_note_back_button"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/outline_arrow_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/add_note_save_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:text="@string/save"
            android:textColor="@color/dark_green"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/add_note_first_layout"
        android:src="@drawable/baseline_add_box_24"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/add_note_second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/background_image_view"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2024_05_21"
            android:textColor="@color/green_opacity"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_10_53am"
            android:textColor="@color/green_opacity"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textColor="@color/dark_green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/layout_spinner_modify"
            android:drawableEnd="@drawable/outline_drop_down_24"
            android:padding="5dp"
            android:spinnerMode="dropdown"
            android:entries="@array/categories_array"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <EditText
        android:id="@+id/add_note_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_note_second_layout"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/transparent"
        android:hint="@string/title"
        android:minHeight="48dp"
        android:textColor="@color/dark_green"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize,TextContrastCheck" />

    <View
        android:id="@+id/add_note_line_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/add_note_title_edit_text"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@color/green_opacity" />

    <EditText
        android:id="@+id/add_note_start_note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_note_line_view"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/start_your_note"
        android:inputType="textMultiLine"
        android:lines="20"
        android:paddingTop="5dp"
        android:textColor="@color/dark_green"
        android:textSize="18sp"
        android:layout_above="@id/bottomCardView"
        tools:ignore="Autofill,VisualLintTextFieldSize,TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCardView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/dark_green"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_photo_icon"
                android:layout_width="20dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/add_photo"
                android:src="@drawable/foreground_add_photo" />


            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="20dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/delete"
                android:src="@drawable/foreground_delete" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>