<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:id="@+id/dashboard_top_layer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dashboard_hello_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="60dp"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,VisualLintOverlap" />

        <TextView
            android:id="@+id/dashboard_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="@color/green"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="24dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/dashboard_account_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_person_24" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/dashboard_search_search_view"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/dashboard_top_layer"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/layout_search_edit_text"
        android:drawableStart="@drawable/outline_search_24"
        android:drawablePadding="8dp"
        android:hint="@string/search_note"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColor="@color/dark_green"
        tools:ignore="Autofill,RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />

    <LinearLayout
        android:id="@+id/dashboard_second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dashboard_search_search_view"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dashboard_list_notes_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_notes"
            android:textColor="@color/dark_green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dashboard_category_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/dark_green"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/dashboard_category_spinner"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/layout_spinner_modify"
                android:drawableEnd="@drawable/outline_drop_down_24"
                android:padding="5dp"
                android:spinnerMode="dropdown"
                android:entries="@array/categories_array"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/dashboard_second_layout"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_note_card_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/outline_add_24"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>