<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_landing"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/landing_page_card_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#73BFE5BF"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/landing_page_context_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/elevate_your_daily_routine_one_note_at_a_time"
                android:textColor="@color/forest_green"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/landing_page_context_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/landing_page_content_details"
                android:textColor="@color/forest_green"
                android:textSize="20sp"
                tools:ignore="VisualLintLongText" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/landing_get_started_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/landing_page_card_view"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/layout_button_background"
        android:text="@string/landing_button_get_started"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>